# Robocup

./: .gitignore  BLE_Robocup_v3.aia  BLE_Robocup_v3.apk  BLE_Robocup_v3_V2.apk  BLE_Robocup_v3_V2_copy.aia  CMakeLists.txt  Embebidos.PrjPcb  Embebidos.PrjPcbStructure  Engranajes_1.stl  Engranajes_2.stl  Motorhalter_motor_new2.stl  PCB1.PcbDoc  README.md  Robot.SchDoc  blecontroller.dart  blink.c  detect_dots.py  extract_DB.py  lateral_x2.stl  main.c  main.cpp  main.dart  mapeo.py  mapping.c  mqtt.py  path_planning.c  predict.py  requirements.txt  rodillo + engranaje.stl_new.stl
Robocup-1/: README.dataset.txt  README.roboflow.txt  data.yaml
Robocup-1/test/labels/: WhatsApp-Image-2023-12-07-at-5-16-57-PM_jpeg.rf.21480e4fe29e08480961b0d694bc2fd8.txt  WhatsApp-Image-2023-12-07-at-5-16-59-PM_jpeg.rf.bcd305a3e8063df4bee7b4214a94e146.txt  WhatsApp-Image-2023-12-07-at-5-17-26-PM_jpeg.rf.f72d37f95f73694d6be05d080950e8b3.txt  WhatsApp-Image-2023-12-07-at-5-17-33-PM_jpeg.rf.00dcce2d97dcc825015367e30657b8e9.txt
Robocup-1/train/labels/: WhatsApp-Image-2023-12-07-at-5-16-45-PM_jpeg.rf.0d0cd4eb4cb0a70cbda1cd096b3adefc.txt  WhatsApp-Image-2023-12-07-at-5-16-45-PM_jpeg.rf.4b754a8e5a811a54853e3ada03727527.txt  WhatsApp-Image-2023-12-07-at-5-16-45-PM_jpeg.rf.bf1ea6695d922cc18c281ba081f5eaaf.txt  WhatsApp-Image-2023-12-07-at-5-16-55-PM_jpeg.rf.72305d13e87d6a94f1f16827db85e28d.txt  WhatsApp-Image-2023-12-07-at-5-16-55-PM_jpeg.rf.cdcd55e52d29da887352240369c06d8a.txt  WhatsApp-Image-2023-12-07-at-5-16-56-PM_jpeg.rf.a857ccb633d3da441b5190532b3f2148.txt  WhatsApp-Image-2023-12-07-at-5-16-56-PM_jpeg.rf.fc19476d51d6d25d0e6c90b208e317b3.txt  WhatsApp-Image-2023-12-07-at-5-17-00-PM_jpeg.rf.37b3785c2d074c7a7b117b92e8c1171a.txt  WhatsApp-Image-2023-12-07-at-5-17-00-PM_jpeg.rf.4042df1f6ef1d95489f14acf9a2d62f0.txt  WhatsApp-Image-2023-12-07-at-5-17-00-PM_jpeg.rf.f7a07c5fc365da2f404b034172ff5a4d.txt  WhatsApp-Image-2023-12-07-at-5-17-04-PM-1-_jpeg.rf.09a03d5e87f50512ae4692bc63b358c9.txt  WhatsApp-Image-2023-12-07-at-5-17-04-PM-1-_jpeg.rf.69a47e44963a824bd04a618aaa8a3230.txt  WhatsApp-Image-2023-12-07-at-5-17-04-PM-1-_jpeg.rf.f77192e89818d0c1bd501e2554864258.txt  WhatsApp-Image-2023-12-07-at-5-17-04-PM_jpeg.rf.b56199d96ad263ae30b978deebccd10c.txt  WhatsApp-Image-2023-12-07-at-5-17-04-PM_jpeg.rf.d040313aded097b06934284878206f76.txt  WhatsApp-Image-2023-12-07-at-5-17-04-PM_jpeg.rf.d3f777b16ad41e57313f02436cae434f.txt  WhatsApp-Image-2023-12-07-at-5-17-06-PM_jpeg.rf.63d991e862c122589c60c217c6194c96.txt  WhatsApp-Image-2023-12-07-at-5-17-06-PM_jpeg.rf.b0618aeb5dcc26073d2f3fd45a22e50e.txt  WhatsApp-Image-2023-12-07-at-5-17-06-PM_jpeg.rf.bcb231beeaf66bbd5cf0c5c6765c61ed.txt  WhatsApp-Image-2023-12-07-at-5-17-07-PM-1-_jpeg.rf.3a9af75faad05b0f98960b6fbca1d885.txt  WhatsApp-Image-2023-12-07-at-5-17-07-PM-1-_jpeg.rf.c8de6e1f5ceb8cc7630ad065218adc02.txt  WhatsApp-Image-2023-12-07-at-5-17-07-PM-1-_jpeg.rf.f98af582fa1c7fd759c44ceb3c350d36.txt  (+24 more)
Rueda/files/: cover.stl  omni_roller.stl  rim.stl  rim_w_integrated_hub.stl
dribble/: Chip Schaufel v2_pala.stl  Dribbler Bruecke_techo.stl  Dribbler Seite v2_lateralx2.stl  Dribblingwelle_eje.stl  Motorhalter_motor.stl  Zahnrad Polyketon z16 Modul 0.7_engranaje.stl  Zahnrad z14 Modul 0.7 Motor_engranaje.stl  rodillo_eng.stl
encoder_v1/: .gitignore  CMakeLists.txt
encoder_v1/inc/: FreeRTOSConfig.h  MPU6050_i2c.h  bt_functions.h  control_functions.h  dribbler.h  encoder.h  lwipopts.h  motor_config.h  mqtt.h  pathfinder.h  robot_movement.h
encoder_v1/src/: MPU6050_i2c.c  bt_functions.c  control_functions.c  dribbler.c  encoder.c  main.c  motor_config.c  mqtt.c  pathfinder.c  robot_movement.c
encoders_v1/: CMakeLists.txt  main.c
encoders_v1/encoder/: encoder.c  encoder.h
encoders_v2/: main.c
encoders_v2/encoder/: encoder.c  encoder.h
encoders_v3/: .gitignore  CMakeLists.txt  main.c
encoders_v3/encoder/: encoder.c
inc/: dribbler.h
pathfinder_pico/: CMakeLists.txt
pathfinder_pico/html/: annotated.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_bfccd401955b95cf8c75461437045ac0.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  globals_vars.html  index.html  main_8c.html  menudata.js  pathfinder_8c.html  pathfinder_8h.html  pathfinder_8h_source.html  struct_ball.html  struct_cell.html  struct_movimiento.html  struct_node.html  struct_node_list.html  struct_obstacle.html  struct_point.html  struct_robot.html
pathfinder_pico/html/search/: all_0.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_f.js  classes_0.js  classes_2.js  classes_3.js  classes_4.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  (+2 more)
pathfinder_pico/inc/: pathfinder.h
pathfinder_pico/src/: main.c  pathfinder.c
(+4 files in other folders)
